Se mejora el index, para el responsive. Se crea un normalize.css con estilos generales de la página

--- a/proyecto1/index.html
+++ b/proyecto1/index.html
@@ -4,8 +4,7 @@
     <title>Tommy Burgos-Portafolio</title>    
     <meta charset="utf-8">
     <link title="Tommy Burgos" rel="icon"  href="html5.png">
-    <meta name="author" content="Tommy Burgos Calle">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <meta name="author" content="Tommy Burgos Calle">    
     <link rel="stylesheet" type="text/css" href="stylesheets/estilo.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css">
     <script src="https://kit.fontawesome.com/62ea397d3a.js" crossorigin="anonymous"></script>
@@ -28,7 +27,7 @@
         <div id="adorno">          
         </div>
         <div id="img">
-          <img id="perfil" src="images/perfil.jpg">
+          <img id="perfil" src="images/perfil1.png">
         </div>
       </div>
 
@@ -67,8 +66,8 @@
         <img class="imgConocimientos2" src="images/flutterDart.png">
       </div>
     </section>
-    <section class="seccionPortafolio">
-      <h2>Portafolio de trabajos</h2>
+    <section class="Conocimientos">
+      <h2 id="titPortafolio">Portafolio de trabajos</h2>
       <div class="imgTrabajos">
          <img class="imgConocimientos" src="images/pJuanXXIII.png">
         <img class="imgConocimientos" src="images/pAkinator.png">
