Se conecta con firebase y se ralizan mejoras en el responsive

--- a/proyecto1/index.html
+++ b/proyecto1/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css">
     <script src="https://kit.fontawesome.com/62ea397d3a.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@1,700&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <header>
@@ -60,7 +61,7 @@
       <div class="Conocimientos">
         <img class="imgConocimientos" src="images/html5.png">
         <img class="imgConocimientos" src="images/css.webp">
-        <img class="imgConocimientos" src="images/js.png">
+        <img class="imgConocimientos" src="images/Js.png">
         <img class="imgConocimientos" src="images/java.png">
         <img class="imgConocimientos" src="images/python.png">
         <img class="imgConocimientos2" src="images/flutterDart.png">
