Se crea el menú responsive

--- a/proyecto1/index.html
+++ b/proyecto1/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="nav__normal">
         <ul>
           <li id="opPrincipal"><a href="index.html">Principal</a></li>
           <li id="opSobreMi"><a href="sobreMi.html">Sobre mi</a> </li>
@@ -23,6 +23,28 @@
         </ul>
       </nav>
     </header>
+
+    <!--Menu Responsive -->
+    <header>
+      <nav class="nav__responsive">                            
+          <ul class="nav__ulResponsive">
+            <div class="nav__responsive__ButtonContainers">
+            <div class="nav__responsive__Button fas fa-bars"></div>
+            </div>     
+            <div class="nav__li_container">
+              <li class="liResponsive" id="opPrincipal"><a href="index.html">Principal</a></li>
+              <li class="liResponsive" id="opSobreMi"><a href="sobreMi.html">Sobre mi</a> </li>
+              <li class="liResponsive" id="opMisProyectos"> <a href="misProyectos.html">Mis proyectos</a></li>
+              <li class="liResponsive" id="opReferencias"><a href="referencias.html">Referencias</a></li>
+              <li class="liResponsive" id="opContactos"><a href="contactos.html">Contactos</a></li>
+            </div>       
+            
+          </ul>
+        
+
+      </nav>
+    </header>
+
     <section class="seccionPrincipal">
       <div class="divPrincipal1">
         <div id="adorno">          
