--- a/proyecto1/sobreMi.html
+++ b/proyecto1/sobreMi.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="stylesheets/estiloSobreMi.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/normalize.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Sobre Mi</title>
 </head>
 <body>
@@ -45,7 +46,7 @@
 			</div>
 		</div>
 	</section>
-	    <footer>
+	  <footer>
       <div class="datos">
         <div>
           <h4>Guayaquil, Ecuador</h4>
@@ -64,6 +65,6 @@
                 
       </div>
     </footer>
-
+  
 </body>
 </html>
