Se realizan mejoras de diseño

--- a/proyecto1/contactos.html
+++ b/proyecto1/contactos.html
@@ -49,13 +49,13 @@
             <h1 class="formTitle">Contactame</h1>    
           </div>
           <label class="formLabel">Nombre completo</label>
-          <input type="text" class="inputText" name="" placeholder="Escribe tú nombre">
+          <input class="input" type="text" class="inputText" name="" placeholder="Escribe tú nombre">
 
           <label class="formLabel">Dirección:</label>
-          <input type="text" name="" placeholder="Dirección">
+          <input class="input" type="text" name="" placeholder="Dirección">
 
           <label class="formLabel">Correo Electronico</label>
-          <input type="email" name="" placeholder="Escribe tú correo">
+          <input class="input" type="email" name="" placeholder="Escribe tú correo">
 
           <label class="formLabel">Mensaje</label>
           <textarea placeholder="Escribe aquí tu mensaje">
