Se dan los ultimos detalles, se agregan los enlaces, e incluso icono de la página Web

--- a/proyecto1/contactos.html
+++ b/proyecto1/contactos.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/estiloContactos.css">
   <script src="https://kit.fontawesome.com/62ea397d3a.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@1,700&display=swap" rel="stylesheet">
+  <link rel="shortcut icon"  href="images/Js.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -79,9 +80,10 @@
         </div>
       </div>
       <div class="redesSociales">
-        <img class="redes" src="images/logoInstagram.png">
-        <img class="redes facebook" src="images/logoFacebook.png">
-        <img class="redes" src="images/logoWhatsApp.png">
+        <a target="_blank" href="https://www.instagram.com/tommy_burgos1/"><img class="redes" src="images/logoInstagram.png"></a>
+        <a target="_blank" href="https://www.facebook.com/tommyruben.burgoscalle"><img class="redes facebook" src="images/logoFacebook.png"></a>
+        <a target="_blank" href="https://walink.co/c8fe52"><img class="redes" src="images/logoWhatsApp.png"></a>
+        
                 
       </div>
     </footer>
