--- a/proyecto1/index.html
+++ b/proyecto1/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Tommy Burgos-Portafolio</title>    
-    <meta charset="utf-8">
-    <link title="Tommy Burgos" rel="icon"  href="html5.png">
+    <link rel="shortcut icon"  href="images/Js.png">
+    <meta charset="utf-8">    
     <meta name="author" content="Tommy Burgos Calle">    
     <link rel="stylesheet" type="text/css" href="stylesheets/estilo.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css">
@@ -59,17 +59,17 @@
         <div id="opciones">
            <div id="Contratarme">
              <button id="btContratarme">
-                <a id="enlaceCont" href="bibliotecaDigital.html">Contratarme<i id="iconoCont" class="fas fa-arrow-right"></i></a>
+                <a id="enlaceCont" href="contactos.html">Contratarme<i id="iconoCont" class="fas fa-arrow-right"></i></a>
              </button>        
            </div>
            <div id="portafolio">
              <button id="btPortafolio">
-                <a id="enlacePort" href="bibliotecaDigital.html">Portafolio<i id="iconoPort" class="fas fa-arrow-right"></i></a>
+                <a id="enlacePort" href="misProyectos.html">Portafolio<i id="iconoPort" class="fas fa-arrow-right"></i></a>
              </button>             
            </div>
            <div id="curriculo">
             <button id="btPortafolio">
-              <a id="enlacePort" href="bibliotecaDigital.html">Descarga mi curriculo<i id="iconoPort" class="fas fa-arrow-right"></i></a>
+              <a id="enlacePort" href="https://drive.google.com/uc?export=download&id=18tcJZUo0qMBNicWVYT3hWYQpXm5Op5wt">Descarga mi curriculo<i id="iconoPort" class="fas fa-arrow-right"></i></a>
             </button>             
            </div>
         </div>
@@ -93,6 +93,10 @@
         <img class="imgConocimientos" src="images/pAkinator.png">
         <img class="imgConocimientos" src="images/pAppCompras.gif">
       </div>
+      <div id="verMas">
+        <a id="enlaceVerMas" href="misProyectos.html"> Ver más<i class="fas fa-arrow-right"></i></a>  
+      </div>
+      
     </section>
     <footer>
       <div class="datos">
@@ -107,10 +111,9 @@
         </div>
       </div>
       <div class="redesSociales">
-        <img class="redes" src="images/logoInstagram.png">
-        <img class="redes facebook" src="images/logoFacebook.png">
-        <img class="redes" src="images/logoWhatsApp.png">
-                
+        <a target="_blank" href="https://www.instagram.com/tommy_burgos1/"><img class="redes" src="images/logoInstagram.png"></a>
+        <a target="_blank" href="https://www.facebook.com/tommyruben.burgoscalle"><img class="redes facebook" src="images/logoFacebook.png"></a>
+        <a target="_blank" href="https://walink.co/c8fe52"><img class="redes" src="images/logoWhatsApp.png"></a>               
       </div>
     </footer>
   </body>
