--- a/proyecto1/misProyectos.html
+++ b/proyecto1/misProyectos.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+  <link rel="shortcut icon"  href="images/Js.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="stylesheets/normalize.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/estiloMisProyectos.css">
@@ -42,19 +43,19 @@
   <h1>Mis Proyectos</h1>
     <section id="flex-container">
       <div id="itPaginaWeb" class="item-proyectos">
-        <img src="images/pJuanXXIII.png">
+        <a target="_blank" href="https://uejuanxxiii.com/"><img src="images/pJuanXXIII.png"></a>
         <h3>Página Web</h3>
-        <p>Proyecto de página web para la Unidad Educativa Juan XXIII usando HTML, CSS y JavaScript</p>
+        <p>Proyecto de página web para la Unidad Educativa Juan XXIII usando HTML, CSS y JavaScript</p><a target="_blank" href="https://github.com/TommyBurgos/Unidad-Educativa-JUANXXIII"> Ver Código</a>
       </div>
       <div id="itJuego" class="item-proyectos">
         <img src="images/akinator.jpg">
         <h3>Juego de adivinanza</h3>
-        <p>Piensa en un animal y Akinator te dira en cual estas pensado, se usa principalmente Java</p>
+        <p>Piensa en un animal y Akinator te dira en cual estas pensado, se usa principalmente Java</p><a target="_blank" href="https://github.com/TommyBurgos/estructuras2doParcial">Ver Código</a>
       </div>
       <div id="itAppCompras" class="item-proyectos">
         <img src="images/pAppCompras.gif">
         <h3>Aplicación de Compras</h3>
-        <p>Aplicación de compras realizada con Dart y Flutter</p>
+        <p>Aplicación de compras realizada con Dart y Flutter</p><a target="_blank" href="https://github.com/cinaboho/Tienda">Ver código</a>
       </div>
   
     </section>
@@ -71,10 +72,9 @@
         </div>
       </div>
       <div class="redesSociales">
-        <img class="redes" src="images/logoInstagram.png">
-        <img class="redes facebook" src="images/logoFacebook.png">
-        <img class="redes" src="images/logoWhatsApp.png">
-                
+        <a target="_blank" href="https://www.instagram.com/tommy_burgos1/"><img class="redes" src="images/logoInstagram.png"></a>
+        <a target="_blank" href="https://www.facebook.com/tommyruben.burgoscalle"><img class="redes facebook" src="images/logoFacebook.png"></a>
+        <a target="_blank" href="https://walink.co/c8fe52"><img class="redes" src="images/logoWhatsApp.png"></a>                        
       </div>
     </footer>
 </body>
