--- a/proyecto1/referencias.html
+++ b/proyecto1/referencias.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="shortcut icon"  href="images/Js.png">
 	<meta charset="utf-8">	
 	<title>Referencias- Burgos Tommy</title>
 	<link rel="stylesheet" type="text/css" href="stylesheets/normalize.css">
@@ -45,17 +46,17 @@
       <div class="itemReferencias">
         <h5>Presidenta y Accionista de la empresa Juan23 S.A. Juansa</h5>
         <h3 class="h3">Lcda. Blanca Toledo Bravo</h3>
-        <h3>Contactactar</h3> <i class="fas fa-arrow-right"></i> <div class="fas fa-phone"></div>
+        <h3 id="telef" class="fas fa-phone">Contactactar</h3>
       </div>
       <div class="itemReferencias">
-        <h5>Presidenta y Accionista de la empresa Juan23 S.A. Juansa</h5>
-        <h3>Lcda. Blanca Toledo Bravo</h3>
-        <h3>Contactactar <i class="fas fa-arrow-right"></i> <i class="fas fa-phone"></i></h3>
+        <h5>Asistente Administrativa de la empresa Juan23 S.A. Juansa</h5>
+        <h3>Tania Tomalá Muñoz</h3>
+        <h3 id="telef" class="fas fa-phone">Contactactar</h3>
       </div>
       <div class="itemReferencias">
-        <h5>Presidenta y Accionista de la empresa Juan23 S.A. Juansa</h5>
-        <h3>Lcda. Blanca Toledo Bravo</h3>
-        <h3>Contactactar <i class="fas fa-arrow-right"></i> <i class="fas fa-phone"></i></h3>
+        <h5>Gerente General de la empresa JUAN23 S.A. Juansa</h5>
+        <h3>Ing.Guillermo Toledo</h3>
+        <h3 id="telef" class="fas fa-phone">Contactactar</h3>
       </div>
     </section>
     <section class="mapa">
@@ -80,9 +81,9 @@
         </div>
       </div>
       <div class="redesSociales">
-        <img class="redes" src="images/logoInstagram.png">
-        <img class="redes facebook" src="images/logoFacebook.png">
-        <img class="redes" src="images/logoWhatsApp.png">
+        <a target="_blank" href="https://www.instagram.com/tommy_burgos1/"><img class="redes" src="images/logoInstagram.png"></a>
+        <a target="_blank" href="https://www.facebook.com/tommyruben.burgoscalle"><img class="redes facebook" src="images/logoFacebook.png"></a>
+        <a target="_blank" href="https://walink.co/c8fe52"><img class="redes" src="images/logoWhatsApp.png"></a>
                 
       </div>
     </footer>
