--- a/proyecto1/sobreMi.html
+++ b/proyecto1/sobreMi.html
@@ -9,6 +9,7 @@
     	<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@1,700&display=swap" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Sobre Mi</title>
+		<link rel="shortcut icon"  href="images/Js.png">
 	</head>
 	<body>
 		<header>
@@ -78,9 +79,10 @@
 	        </div>
 	      </div>
 	      <div class="redesSociales">
-	        <img class="redes" src="images/logoInstagram.png">
-	        <img class="redes facebook" src="images/logoFacebook.png">
-	        <img class="redes" src="images/logoWhatsApp.png">
+	        <a target="_blank" href="https://www.instagram.com/tommy_burgos1/"><img class="redes" src="images/logoInstagram.png"></a>
+	        <a target="_blank" href="https://www.facebook.com/tommyruben.burgoscalle"><img class="redes facebook" src="images/logoFacebook.png"></a>
+	        <a target="_blank" href="https://walink.co/c8fe52"><img class="redes" src="images/logoWhatsApp.png"></a>
+	        
 	                
 	      </div>
 	    </footer>
