Ultimos detalles en referencias

--- a/proyecto1/referencias.html
+++ b/proyecto1/referencias.html
@@ -46,17 +46,17 @@
       <div class="itemReferencias">
         <h5>Presidenta y Accionista de la empresa Juan23 S.A. Juansa</h5>
         <h3 class="h3">Lcda. Blanca Toledo Bravo</h3>
-        <h3 id="telef" class="fas fa-phone">Contactactar</h3>
+        <h3 id="telef" class="fas fa-phone"><a target="_blank" href="https://walink.co/c8fe52">Contactactar</a></h3>
       </div>
       <div class="itemReferencias">
         <h5>Asistente Administrativa de la empresa Juan23 S.A. Juansa</h5>
         <h3>Tania Tomalá Muñoz</h3>
-        <h3 id="telef" class="fas fa-phone">Contactactar</h3>
+        <h3 id="telef" class="fas fa-phone"><a target="_blank" href="https://walink.co/c8fe52">Contactactar</a></h3>
       </div>
       <div class="itemReferencias">
         <h5>Gerente General de la empresa JUAN23 S.A. Juansa</h5>
         <h3>Ing.Guillermo Toledo</h3>
-        <h3 id="telef" class="fas fa-phone">Contactactar</h3>
+        <h3 id="telef" class="fas fa-phone"><a target="_blank" href="https://walink.co/c8fe52">Contactactar</a></h3>
       </div>
     </section>
     <section class="mapa">
