Se sube un video en la seccion sobre mi

--- a/proyecto1/sobreMi.html
+++ b/proyecto1/sobreMi.html
@@ -66,6 +66,16 @@
 				</div>
 			</div>
 		</section>
+
+		    <section class="video">
+		    	<div>
+		    		<h3>En mis tiempos libres tambien me gusta hacer video en la plataforma de youtube, aquí podrán ver un poco de lo que hago</h3>
+		    	</div>		      
+		      <video controls="" src="videos/optimizar-netbeans-netbeans-consume-mucha-memoria.mp4">			    	
+		    </video>
+		    <p>Puedes Acceder a mi canal de youtube dando <a id="canalYT" href="https://www.youtube.com/channel/UC0i1k_mhSeF8Yt714aduHSg">clic aquí</a></p>
+		    </section>
+			    
 		  <footer>
 	      <div class="datos">
 	        <div>
