--- a/proyecto2/index.html
+++ b/proyecto2/index.html
@@ -24,6 +24,7 @@
     <link href="lib/animate/animate.min.css" rel="stylesheet">
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -156,9 +157,13 @@
     <!-- Carousel End -->
 
 
-    <!-- Service Start -->
+    
     <div class="container-xxl py-5">
         <div class="container">
+            <div id="grafico">
+
+            </div>
+            <!-- Service Start
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="d-flex py-5 px-4">
@@ -190,9 +195,10 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
     </div>
+
     <!-- Service End -->
 
 
@@ -435,10 +441,10 @@
     <!-- Booking End -->
 
 
-    <!-- Team Start -->
+    
     <div class="container-xxl py-5">
         <div class="container">
-            <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+    <!--    <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                 <h6 class="text-primary text-uppercase">// Our Technicians //</h6>
                 <h1 class="mb-5">Our Expert Technicians</h1>
             </div>
@@ -507,7 +513,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> Team Start -->
         </div>
     </div>
     <!-- Team End -->
